--- a/styles.css
+++ b/styles.css
@@ -2949,7 +2949,7 @@
    
    .div-block-nomor {
      padding-bottom: 700px;
-     background-image: url("msp.webp");
+     background-image: url("MSP.jpg");
      background-position: 0px 0px;
      background-size: cover;
      background-attachment: fixed;
